hphp/hack/test/typecheck/instanceof/instanceof_parent_outside.php.exp
File "instanceof_parent_outside.php", line 4, characters 13-18:
A type specifier is expected here. (Parsing[1002])
File "instanceof_parent_outside.php", line 4, characters 13-18:
Encountered unexpected text `parent`, was expecting a type hint. (Parsing[1002])
